--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,18 +39,24 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@tsparticles/engine": "^3.0.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.0",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
+    "gsap": "^3.12.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
@@ -60,7 +66,11 @@
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "typeit": "^8.7.1",
     "vaul": "^1.1.2",
+    "@tanstack/react-query": "^5.90.16",
+    "viem": "^2.43.5",
+    "wagmi": "^2.10.9",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -78,7 +88,9 @@
     "typescript": "5.6.3"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
-  "overrides": {
-    "tailwindcss>nanoid": "3.3.7"
+  "pnpm": {
+    "overrides": {
+      "tailwindcss>nanoid": "3.3.7"
+    }
   }
 }
